GVT-2061: Prevent tables from overflowing the whole page (#714)

--- a/ui/src/infra-model/list/infra-model-list.module.scss
+++ b/ui/src/infra-model/list/infra-model-list.module.scss
@@ -3,14 +3,9 @@
 @import 'react-widgets/styles.css';
 
 .infra-model-list {
-    flex: 1;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    // Limit view width to screen width, in this way the toolbar section will stay
-    // in screen even if the table gets wider than the screen
-    max-width: 100vw;
-    box-sizing: border-box;
 }
 
 .infra-model-list__search-form {
@@ -21,10 +16,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-
-    &__table {
-        overflow: scroll;
-    }
 }
 
 .infra-model-list-search-result__status-row {
@@ -64,7 +55,6 @@
     background: $color-white-darker;
     padding: 4px;
     height: 15px;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 10px;
 }
 
